fix align

--- a/style.css
+++ b/style.css
@@ -36,6 +36,6 @@ p {
     color: brown
 }
 
-.contacto{
+.contacto2{
     text-align: center;
 }
